Fix arrow text on mobile screen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -957,8 +957,8 @@ Persona detail page
 	}
 
 	.arrow-box {
-	margin-left: 100px;
-	margin-right: 100px;
+	margin-left: 10%;
+	margin-right: 10%;
 	}
 }
 
